Fixed pickling issue

--- a/Linear Classifier/Linear Classifier.ipynb
+++ b/Linear Classifier/Linear Classifier.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -29,10 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf"
@@ -47,16 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import sys\n",
     "def unpickle(file):\n",
     "    import pickle\n",
     "    with open(file, 'rb') as fo:\n",
-    "        dict = pickle.load(fo, encoding='bytes')\n",
+    "        if sys.version[0] == '2':\n",
+    "            dict = pickle.load(fo)\n",
+    "        elif sys.version[0] == '3':\n",
+    "            dict = pickle.load(fo, encoding='bytes')\n",
     "    return dict"
    ]
   },
@@ -69,16 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys([b'batch_label', b'filenames', b'labels', b'data'])"
+       "['data', 'labels', 'batch_label', 'filenames']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,16 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10000, 3072)"
+       "(10000L, 3072L)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,8 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -135,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAHNxJREFUeJztnWts3Nd55p93LuRweJMoUjKti2Wp\ncmI78S2qN103bXpJ6gYtnABtkXxI/SGoit0GuwHaD0YW2KTYXSBdbBLkwyILZWPUXWTjpLk0RhEk\nMdwkTrZb23Riyxc1seXIupAWRYmkeBnO9e2HGe/KzHkOR0NqSOU8P0DQ8Lxz5pz5z/+Z/8x55n2P\nuTuEEOmR2ewJCCE2B4lfiESR+IVIFIlfiESR+IVIFIlfiESR+IVIFIlfiESR+IVIlNx6OpvZvQA+\nAyAL4H+6+ydi9x/cPupju/cFY5380tCMx2KPZoh0FFuTa/yXqLHZO4lGnzEJXpg8jcW5C22d4B2L\n38yyAP47gHcBOAPgKTN7xN1fZH3Gdu/Df/rKD4KxRr3WyRxorFPxx95QaJ9r+7y8JrgmfoYemWLD\nGzRWRThWa/A+qIYH+y9//C7eZxXr+dh/N4CX3f0Vd68AeBjAfet4PCFEF1mP+HcDOH3Z32dabUKI\na4D1iD/0AfnnPouY2REzmzCziUuzM+sYTgixkaxH/GcA7L3s7z0AJlffyd2Puvthdz88tH10HcMJ\nITaS9Yj/KQCHzOxGM+sB8H4Aj2zMtIQQV5uOV/vdvWZmHwbwbTStvgfd/YVYHzMglw0vpzc6eR/q\nZGke4e8r7Twmi2Qii7KdT+Qap4PFeWZ5NYOdHazoY3ZAzCmKjeXOz+8McTKykefcIA93JUdpXT6/\nu38TwDfX8xhCiM1Bv/ATIlEkfiESReIXIlEkfiESReIXIlHWtdrf0YAZYvVFbI1YAs9WwDp9C93a\nT2tdbLQJ27FhR8+rjU8U8tizjgxnJKfNIslMDaKjKzkVdeUXIlEkfiESReIXIlEkfiESReIXIlG6\nutpvALIsIaGTgmVbBL2DbmG2iKPSiK3c18LL/Zl6nfZpVtFbHzpvhUgUiV+IRJH4hUgUiV+IRJH4\nhUgUiV+IROluYo8ZMiQLxi1ia1CrL+bjbLzHQ2v4RfM5YvPo0MLcYFu007p0ndFd762jnLD4dk+R\nbpEafg1+ftcr5WB7tcx3sbJcT3icK9jZSFd+IRJF4hciUSR+IRJF4hciUSR+IRJF4hciUdZl9ZnZ\nSQALAOoAau5+eM1OmXA2kju3QnIglkd0d6eNf19jmYexbZXqEa+pcRWyFQ3hvcPipmhntfNi82d1\nF2P1GGOZnRtuEEbGykTORW6+ASBb0QFAJmJlV8uLwfbKCh+qtxC2+q7klNoIn/833F17bwtxjaGP\n/UIkynrF7wC+Y2ZPm9mRjZiQEKI7rPdj/z3uPmlmOwE8amb/7O6PX36H1pvCEQAY271vncMJITaK\ndV353X2y9f80gK8DuDtwn6PuftjdDw+NjK5nOCHEBtKx+M2s38wGX78N4N0Ant+oiQkhri7r+di/\nC8DXW9ZNDsD/dvdvxToY+BZEFnkfMr/y96irUfKTOTmVxQXaxyL2T09fH43VI9lZMRvTO0hj6zRz\nL7NV1os7yMLrNNcyviVX5HVxYs0BKC3NB9tXlku0T2+eWX1hqzdEx+J391cA3N5pfyHE5rJF3rqF\nEN1G4hciUSR+IRJF4hciUSR+IRKly3v1OfKoBGONBp8K35eMZ0plIpZHzMrJZPj74fz5c8H2x77+\nFdpncGCAxm5685torG/7MI31j43RWHFgJNhej2QeuvFjFbs6xC1YcpQ79GCjV6kOUv5ilmg9cg7E\nnkAmZs86P79nL0wF20+e4D+b+de/8rtkIK6J1ejKL0SiSPxCJIrEL0SiSPxCJIrEL0SidHe7Lq8j\n07gUnojx1W22Lsvq1QFrbJ0UWZXNWp7G5mZeC7Yf+6fv8bFWwu4GAPzs2F4aG9q9i8b2v/U2GvuV\nd/xOsN2sQPvUI6v9LBELiK9ucyJ1/yLL9vEF/Vi/8Hix1f5Y4lS9skRj5yYnaWzXTv5a1yvhxJ6T\nL/+Y9hkq9gfbSyWeZLYaXfmFSBSJX4hEkfiFSBSJX4hEkfiFSBSJX4hE6arVV62uYPL0i8HY+N5f\npv0aJEmH2TjNWGfva17nGzLVa+Vg+3BvZJumOp/j0vQZGrtwKZzsAQDn587TWF9uKNh+21330D6Z\n3ogtGkmesg0+fTIRPy9ecy+2bxux+hr8EbM5fu6cefUnNPZP3/82jd1996/S2KkTLwTbz0++Svs8\ntRw+F5eWZPUJIdZA4hciUSR+IRJF4hciUSR+IRJF4hciUdb0aszsQQC/B2Da3d/SahsB8CUA+wGc\nBPBH7j671mOVV5Zx4qfPBWPX7+ab/2RYpl0kMytmDTWy/D2vthK2UADgp88+HWzPVJdpn52RGn4n\np7mdBwtnbQFAYz6cGQkA//DI3wXb+/P88W658600VovZbxFvjpUMrDe4LVeP1J/LRerqWSQLL0Ni\n2Yg9WCvz4/uTZ/4vjb344x/Q2OL8WRqbPHUq2D43zyVVbYSPVb3Gs0hX086V/68B3Luq7QEAj7n7\nIQCPtf4WQlxDrCl+d38cwMVVzfcBeKh1+yEA793geQkhrjKdfuff5e5TAND6f+fGTUkI0Q2u+oKf\nmR0xswkzm1ha4FVQhBDdpVPxnzOzcQBo/T/N7ujuR939sLsf7h/ki05CiO7SqfgfAXB/6/b9AL6x\nMdMRQnSLdqy+LwJ4J4BRMzsD4GMAPgHgy2b2IQCnAPxhO4PVazXMz4Q/JNRXuL2S6wsvKTR43UmY\nccvDM7xI50UyPwA4ceypYPtgDz+Mw729NHZhhmfn1ebnaGxkmT/x7aNhj+0nEz+kfV45/iyNDWzb\nTmO3v+0uGsv3hQuGNmJbYUVsRWZtAUC5xF/r0sJisH1x7gLtc/rVcJYdALw4we28RqR45vTZkzS2\nQOZY6C/SPpkcOQeuYOuyNcXv7h8god9qfxghxFZDv/ATIlEkfiESReIXIlEkfiESReIXIlG6WsCz\nVqvg4oVw0cqfvXKM9nvTre8Itlumj/bJRzK9spE95k6fPEljc3Nh+23f+Cjtg6UqDcW2uosVEi0t\nhfd2A4DtI2FrrjzPLcznn3qSxnp6+HGcfZlbhIX+8A+6+gb4a4ZIxt/ceW7NlSK/HD1DMuYWFyKF\nLnsimYc1nsGZiex5WMvw13OgdzDYXooUf200SuHAFeyfqCu/EIki8QuRKBK/EIki8QuRKBK/EIki\n8QuRKF21+rxRR6UULko4eTa8hx8AHHrTHcH2pUVidwCoRaytTGQvtsWZczRWroSLe5YjGWezkSzB\n+eVwNhcAFIu89kEuFylc6uEMt3rEHhzr51mO2QYvaDp7IlyMFQDKpbAlVqvyx4u5VH39vBDqyCDP\nfmtceCU8j2WeCXjozbfSWKGHF61aJM8ZAF49v7oS3v9nrho+D6yf24OFQXIOX0FWn678QiSKxC9E\nokj8QiSKxC9Eokj8QiRKV1f7G406KqTO2amf8bppr7x0PNjemx2jfV5+8ns0NtjHV7czVb7CWiNJ\nHU8c+zHtMzbAa+CVIttT1Re5EzC6kz/vejW8ir20yGsC7ojU6atXIsvHlUgRxVL4OBYzfEk/V+ih\nsfH919FYtsYTe84WwolVl8o84apR4U7A4AB3YfaM7qCxkcFtNPbwtx4Ntu88xJ2FbbuHg+25bJb2\nWY2u/EIkisQvRKJI/EIkisQvRKJI/EIkisQvRKK0s13XgwB+D8C0u7+l1fZxAH8C4PX9pj7q7t9c\n87EAZEj2xtzF12i/1ybPBtvf8bZbaJ+b33kPjZ14kdeeWzw7Q2O5TNiamwO3B4d7ufUyfvAGGjt9\n/ASNlVf4ePmR8PZg+d7w9lkA4JFEoUqNz996eEJNGeHt17J1brEVstzqG+jh255lwZOFxraFLbHz\nC7wm4MxcOPkMAKweSUwq8y3nxndwe3a4EH5u5WU+Vh/pY9Z+Zk87V/6/BnBvoP3T7n5H69+awhdC\nbC3WFL+7Pw6A5yMKIa5J1vOd/8NmdszMHjQz/hMxIcSWpFPxfxbAQQB3AJgC8El2RzM7YmYTZjZR\nXuHf94QQ3aUj8bv7OXevu3sDwOcA3B2571F3P+zuh3sL/Df1Qoju0pH4zWz8sj/fB+D5jZmOEKJb\ntGP1fRHAOwGMmtkZAB8D8E4zuwOAAzgJ4E/bGczdUK+EraOycUspmw9Ps8a2LALQE8kQGyrypz0+\nwLPObhwLW1uFvsi2YYP7aOz2O8ZprLHC35crKys0lsuE+znJ9gOAmTleZ3Bqhq/1Fou8rl6vk694\nZf6aFar8NZu/eJ7GrMpr5/Xmw69NpcK/gi5XeJYgcjyrb3aW28SLESu7x8JzyfTxsYZ2hJ9XNlKf\ncjVrit/dPxBo/nzbIwghtiT6hZ8QiSLxC5EoEr8QiSLxC5EoEr8QidLVAp6AwRG2c5aXuMVWWgkX\n/ZyeeZX2yZGsJwAoDHBr7s6bD9DY1NlwkdHzx07RPnt/idt5N4yP0lj2Nj6PiX98gsYW5sN2Uy6y\n/Ve9xLPRZs9N0thM5PQZJkVSCzn+OvcXudU3t8TnWFoInx8AsEQSIJciRTpry3ysGnh2XqHAz6ul\nC+HMVACo18L25/DQLtqnbyCcvUec3vB927+rEOIXCYlfiESR+IVIFIlfiESR+IVIFIlfiETpqtVX\n6Cvg0K03BWOzczwzqzR/Ltj+/DGeRfXkNM9Uy5d4Ztlf/Lt/S2PvGwrbZdt2fJ/2WZqZorH+6Zdo\n7KYBnrl3gtfixJlTYfszu3c/7VOtcfut7Pz6sHiJW2ylpbAVNRDbJzHLn9jCMi9aenGOnwdLJHtv\nbokf3x4+FE68eobG9u4IFwsFgHyeZ62W6+E9D3MZ3sdrbJL8tVyNrvxCJIrEL0SiSPxCJIrEL0Si\nSPxCJEpXV/uzuSx2XDcSjO3cxRMm0AivHF+a59sqnb/EV9kXzvJ+p6a4S3D96PXB9nf/+m/RPqef\nfZrGLk7ybcMyY9tobHyUb5Pw8onjwfZaeEG5GQPf4mkx4oxYpF5chaw6z5f4FlSlc3zVPmt8rIXy\nPI3limRbq4jrMBtxMZYW+fEol3jtv+vHeL3D5Wp4G7jePp7oxGr1WeS1XI2u/EIkisQvRKJI/EIk\nisQvRKJI/EIkisQvRKK0s13XXgB/A+A6AA0AR939M2Y2AuBLAPajuWXXH7k799AAwBywcEKCg9dU\ncwtbIayOGQDs2r2Txvoy4W23AKDaCI8FAIvEWjTnttEvv+sPaOylF3iNtnKVW2I9T/HahX2kPqEb\nP1Zz83M0VmtEslwskkTiJMbaAeSqfAsty/D5941GajL+q9uC7WMjvH7i977DayS+dppvG3b2In9u\niyv89axmw8+tfwc/Txsk58fbd/rauvLXAPy5u98M4O0A/szMbgHwAIDH3P0QgMdafwshrhHWFL+7\nT7n7j1q3FwAcB7AbwH0AHmrd7SEA771akxRCbDxX9J3fzPYDuBPAEwB2ufsU0HyDAMA/Zwshthxt\ni9/MBgB8FcBH3J0XNv/5fkfMbMLMJpYWeMEOIUR3aUv8ZpZHU/hfcPevtZrPmdl4Kz4OIPijeHc/\n6u6H3f1w/yBfwBBCdJc1xW9mBuDzAI67+6cuCz0C4P7W7fsBfGPjpyeEuFq0k9V3D4APAnjOzJ5p\ntX0UwCcAfNnMPgTgFIA/XOuBzIEMsY4qdW6F5HvD71HLS4u0T815Glu2wLOl/u6Rr9HYnQfC1tz0\nNM8q23nzO2isbzu3+ib+8R9o7NQMz34rDobrDJbL/Hj0F3ntvBq41bdj1w4ay2TDXlQ2x23RHtIH\nAHbvvo7G9tzKY6PjQ8H2XuOn/twcz+r79vQPaKzK/DcAC2Xuwe28ITz/nfvCGbAAYD3EGr8Cq29N\n8bv7DyMPyXNZhRBbGv3CT4hEkfiFSBSJX4hEkfiFSBSJX4hE6WoBz3qjjsXlsI2yvMJ//WfEQVlc\n4sUU4fyp1fPcvvrWo9+lsanj4QKe05Gijo0XTtBYzEYrR4pS9ozwLLbKa+HMw+VFnq1Ycj6PsYjd\n9PvvfzeNWSFsEGWykbkv8HlcFylaWsryH5yWqmE7uNjHf3B26OaDNPZ/vv8UjZUXIluRFfjzvunW\nNwXbd47wY1+qhnWUZWIJzantewohfqGQ+IVIFIlfiESR+IVIFIlfiESR+IVIlK5afWaGXD48pC/z\nrDNWU9Mi+7flCzzW18dtl0NvuYnGDozsDrZnLvH9/eYyvDDprh28iGRxx400Vl1eobHZybAFtHAx\nVqSTF56cn+eZkwsrfG+6LEmcrFS4LWd1bpWdm+c2YK2HHw/mfM1GbOJ6jh+PYqQmxfw0Px71yF6J\nszPh18ar4fMNALJ1VsGTj7MaXfmFSBSJX4hEkfiFSBSJX4hEkfiFSJSurva7N1Arh2v1DUQSLXK5\n8DRXIltJ1as8kSWT4U97eySBZKEUXqk+ePs+Po8h7iz0ZngSxuwyX2XPF4dpbPj68PYJkyd5otDe\nnbwG3tT8azw2eYHGxnoHgu2NSDLT8DA/B7JZfp3KFcNjAUDdw+dBbw8fK1/opbE9B/fQ2NkTP6Ux\nNPj8z5yaCraXym+mffL94Tlapv3rua78QiSKxC9Eokj8QiSKxC9Eokj8QiSKxC9Eoqxp9ZnZXgB/\nA+A6AA0AR939M2b2cQB/AuB8664fdfdvrvV4LO+gWOTWC0vgWVzkySoGnkmR6+FWTnEovN0VAIxs\nC29rVYwk6MyBJ/ZUq5EtxfJ8C60FYpcCwI49YasvP/gz2uf228M15ACgcoyPVa3w+Y/uCG/l5dkq\n7VPs4ce+WucZK408TwjKEYvQnT9eIVJv75duPkBjLzxxmsYGivy5sXO17vzavG1b2O5l26SFaMfn\nrwH4c3f/kZkNAnjazB5txT7t7v+t7dGEEFuGdvbqmwIw1bq9YGbHAfBcQyHENcEVfec3s/0A7gTw\nRKvpw2Z2zMweNDP+0zghxJajbfGb2QCArwL4iLtfAvBZAAcB3IHmJ4NPkn5HzGzCzCaWF3nRBSFE\nd2lL/GaWR1P4X3D3rwGAu59z97q7NwB8DsDdob7uftTdD7v74eIAX8QSQnSXNcVvZgbg8wCOu/un\nLmsfv+xu7wPw/MZPTwhxtWhntf8eAB8E8JyZPdNq+yiAD5jZHWi6dycB/OlaD+QAauTtpp4Jb+8E\nALlc2L7o6eUWT3mJ11MrFPknkJGdYYsKAArE9crmuXXokezCvoillI1kLFarPLZnfzhD7+R+bkcO\n7+LH49bbeU3DYj+f/+DQULB9eSVcYxAAKhX+tbAeOR6WCY8FAHViEZaWeJZjMfK69A2Q4oQArr+R\nH+N9N/A18skz4czJ8zOROV4Xtg4bEQtzNe2s9v8QQEiZa3r6Qoiti37hJ0SiSPxCJIrEL0SiSPxC\nJIrEL0SidHe7rkwG2b6wVbJc59lvvbmwDTgwzC2ebGTfomqdZ5ZZnr8fLi+Ebar+Brd/IrUggSq3\ntjLOM+Z2jvACnrVi2Ba99W3csmNbawHAge17aezUeV7cc352Ntie7+WDVSPZirU6P1bF3ojVVwtb\nrYN9kSy7yLHvJ4UzAWD3wTEa23conG0JAJeI7XjpErdFl0vh7cYajci+YKvQlV+IRJH4hUgUiV+I\nRJH4hUgUiV+IRJH4hUiUrlp9MCBDEvHKK9zqqy2Hrbl6JKsvW+BPzTKxwpm8AGKuuC3YvlLj1mFP\nJOPPiIUJANk6j+XZQQRg+bDFedNbb6R9UOeZh6jxeSw7z5w0UtxzeIgXar2wHLavAKBa4dZtJjL/\nbD2cDZjPxk59PlYsk7F/mNuYo7u4Pbt770iwvVzl1mcveVmMv1w/h678QiSKxC9Eokj8QiSKxC9E\nokj8QiSKxC9EonTX6oMDHrZezCJZeLVwn3IlYvFkYwVB+dOuG7cBq2TPwEqVW30lMncAqNdj2WPc\nEqtGxsuRvdp6B7nlGM0Eq/HYngPhYqEAUCDZmxGXEn39vJBoPpIeWVpepLEaOf65DM/qy0TOgUyW\nP4HrrufFX4tFPv8DB8OZk9PnzwfbAaCXZJ9mrsDr05VfiESR+IVIFIlfiESR+IVIFIlfiERZc7Xf\nzAoAHgfQ27r/V9z9Y2Z2I4CHAYwA+BGAD7o7z84BAHfUSRKMk22VAACN8Kp+KZIMhEwkEYSs2gNA\nJsNjNZJAslji9eViK/OR/BEMrgzQ2ECRr1T3F8MuQS7HV6lXYgkkPbxflSTNAEC9EX7eGd4FfYOR\npBnjSTMrJX4as+OfiWwP19PDXQeLSGbfjXxLrnok+ahvMPyajRe4m4Js+7X6GO1c+csAftPdb0dz\nO+57zeztAP4KwKfd/RCAWQAfWvdshBBdY03xe5PXjdR8658D+E0AX2m1PwTgvVdlhkKIq0Jb3/nN\nLNvaoXcawKMATgCYc/9/v9g5A4B/5hFCbDnaEr+71939DgB7ANwN4ObQ3UJ9zeyImU2Y2cTyAv9u\nLIToLle02u/ucwC+B+DtALaZ2eurH3sATJI+R939sLsfLg7yhRQhRHdZU/xmNmZm21q3+wD8NoDj\nAL4L4A9ad7sfwDeu1iSFEBtPO4k94wAeMrMsmm8WX3b3vzezFwE8bGb/GcCPAXx+7YdyWIMkWhiv\nnccKk83MXuR9Iok9g0Oxbb74++GF2blg+8IS/zoTSyLK57l9dWmR18fzSCJOtRa2P4eGeQ25lUpk\nmyxi2TVj3Gp1klDTU+DWYW+ktmJvDz8/vMFjGWKJxZKqYs/ZEXnO4OdcJZIgxZKFcnl+7tRAXrMr\nqOG3pvjd/RiAOwPtr6D5/V8IcQ2iX/gJkSgSvxCJIvELkSgSvxCJIvELkSjmHkkt2+jBzM4DeLX1\n5yiAma4NztE83ojm8UautXnc4O5j7TxgV8X/hoHNJtz98KYMrnloHpqHPvYLkSoSvxCJspniP7qJ\nY1+O5vFGNI838gs7j037zi+E2Fz0sV+IRNkU8ZvZvWb2EzN72cwe2Iw5tOZx0syeM7NnzGyii+M+\naGbTZvb8ZW0jZvaomb3U+n/7Js3j42Z2tnVMnjGz93RhHnvN7LtmdtzMXjCzf99q7+oxicyjq8fE\nzApm9qSZPduax1+22m80sydax+NLZpGqpu3g7l39ByCLZhmwAwB6ADwL4JZuz6M1l5MARjdh3F8D\ncBeA5y9r+68AHmjdfgDAX23SPD4O4C+6fDzGAdzVuj0I4KcAbun2MYnMo6vHBM3E3IHW7TyAJ9As\noPNlAO9vtf8PAP9mPeNsxpX/bgAvu/sr3iz1/TCA+zZhHpuGuz8OYHUxgvvQLIQKdKkgKplH13H3\nKXf/Uev2AprFYnajy8ckMo+u4k2uetHczRD/bgCnL/t7M4t/OoDvmNnTZnZkk+bwOrvcfQponoQA\ndm7iXD5sZsdaXwuu+tePyzGz/WjWj3gCm3hMVs0D6PIx6UbR3M0Qf6jWyGZZDve4+10AfhfAn5nZ\nr23SPLYSnwVwEM09GqYAfLJbA5vZAICvAviIu1/q1rhtzKPrx8TXUTS3XTZD/GcAXL4hOS3+ebVx\n98nW/9MAvo7NrUx0zszGAaD1//RmTMLdz7VOvAaAz6FLx8TM8mgK7gvu/rVWc9ePSWgem3VMWmNf\ncdHcdtkM8T8F4FBr5bIHwPsBPNLtSZhZv5kNvn4bwLsBPB/vdVV5BM1CqMAmFkR9XWwt3ocuHBMz\nMzRrQB53909dFurqMWHz6PYx6VrR3G6tYK5azXwPmiupJwD8h02awwE0nYZnAbzQzXkA+CKaHx+r\naH4S+hCAHQAeA/BS6/+RTZrH/wLwHIBjaIpvvAvz+FU0P8IeA/BM6997un1MIvPo6jEBcBuaRXGP\noflG8x8vO2efBPAygL8F0LuecfQLPyESRb/wEyJRJH4hEkXiFyJRJH4hEkXiFyJRJH4hEkXiFyJR\nJH4hEuVfADERd3rj30mgAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x22c93075390>"
+       "<matplotlib.figure.Figure at 0x661d470>"
       ]
      },
      "metadata": {},
@@ -158,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +195,7 @@
        "'horse'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -237,7 +241,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "scores = tf.matmul(x, W) + b\n",
@@ -267,7 +273,9 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "optimizer = tf.train.GradientDescentOptimizer(learning_rate=0.01).minimize(loss)\n",
@@ -295,7 +303,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "labels = np.array(dataset[b'labels'])\n",
@@ -325,7 +335,9 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "training = dataset[b'data']\n",
@@ -424,21 +436,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
