Updated fully connected net

--- a/Fully Connected Networks/Fully Connected Network.ipynb
+++ b/Fully Connected Networks/Fully Connected Network.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -429,26 +429,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch   1, loss=1862.446064, accuracy=13.30%\n",
-      "epoch  10, loss=28.634450, accuracy=33.31%\n"
+      "INFO:tensorflow:Restoring parameters from /tmp/fcn.ckpt\n",
+      "epoch   1, loss=73.270060, accuracy=26.93%\n"
      ]
     }
    ],
    "source": [
-    "n_epochs = 10    # Do 10 full passes through the dataset before we quit training\n",
+    "n_epochs = 1     # Do 10 full passes through the dataset before we quit training\n",
     "batch_size= 256  # Feed in only 256 images in a single batch instead of all 9,000\n",
     "\n",
     "training_size = x_train.shape[0]\n",
     "\n",
     "from math import ceil\n",
     "n_batches = ceil(training_size / batch_size)\n",
+    "\n",
+    "saver = tf.train.Saver() # Allows us to save a model\n",
+    "saver.restore(sess, \"/tmp/fcn.ckpt\")\n",
     "\n",
     "for j in range(n_epochs):\n",
     "    perm = np.random.permutation(training_size)  # Every epoch, get a new set of batches\n",
@@ -461,7 +464,9 @@
     "        total_loss += batch_loss\n",
     "        total_accuracy += batch_accuracy\n",
     "    if j%10 == 9 or j==n_epochs-1 or j==0:\n",
-    "        print(\"epoch %3d, loss=%6f, accuracy=%.2f%%\" % (j+1, total_loss/n_batches, 100*round(total_accuracy/n_batches, 4)))"
+    "        print(\"epoch %3d, loss=%6f, accuracy=%.2f%%\" % (j+1, total_loss/n_batches, 100*round(total_accuracy/n_batches, 4)))\n",
+    "        \n",
+    "save_path = saver.save(sess, \"/tmp/fcn.ckpt\")"
    ]
   },
   {
