--- a/Fully Connected Networks/Fully Connected Network.ipynb
+++ b/Fully Connected Networks/Fully Connected Network.ipynb
@@ -563,7 +563,7 @@
     "training_size = x_train.shape[0]\n",
     "\n",
     "saver = tf.train.Saver() # Allows us to save and restore a model\n",
-    "#saver.restore(sess, model_name)\n",
+    "saver.restore(sess, model_name)\n",
     "\n",
     "\n",
     "for j in range(n_epochs):\n",
