Minor syntax update

--- a/CNNs/convnet.ipynb
+++ b/CNNs/convnet.ipynb
@@ -38,13 +38,15 @@
    "outputs": [],
    "source": [
     "def conv(inputs, n_filters, name):\n",
-    "    W, b, beta, gamma, mov_mean, mov_var = load_weights(name)\n",
+    "    weights, bias, beta, gamma, mov_mean, mov_var = load_weights(name)\n",
     "    with tf.variable_scope(name):\n",
+    "        W = tf.get_variable('W', initializer=weights)\n",
+    "        b = tf.get_variable('b', initializer=bias)\n",
     "        convolved = tf.nn.conv2d(input=inputs,\n",
-    "                                 filter=tf.get_variable('W', initializer=W),\n",
+    "                                 filter=W,\n",
     "                                 strides=[1,1,1,1],\n",
     "                                 padding='SAME')\n",
-    "        activations = tf.nn.relu(convolved + tf.get_variable('b', initializer=b))\n",
+    "        activations = tf.nn.relu(convolved + b)\n",
     "        normed = tf.nn.batch_normalization(activations, mov_mean, mov_var, beta, gamma, 1e-7)\n",
     "        return normed"
    ]
@@ -85,10 +87,11 @@
    "outputs": [],
    "source": [
     "def fc(inputs, name):\n",
-    "    W, b, beta, gamma, mov_mean, mov_var = load_weights(name)\n",
+    "    weights, bias, beta, gamma, mov_mean, mov_var = load_weights(name)\n",
     "    with tf.variable_scope(name):\n",
-    "        activations = tf.nn.relu(tf.matmul(inputs, tf.get_variable('W', initializer=W)) \n",
-    "                                 + tf.get_variable('b', initializer=b))\n",
+    "        W = tf.get_variable('W', initializer=weights)\n",
+    "        b = tf.get_variable('b', initializer=bias)\n",
+    "        activations = tf.nn.relu(tf.matmul(inputs, W) + b)\n",
     "        normed = tf.nn.batch_normalization(activations, mov_mean, mov_var, beta, gamma, 1e-7)\n",
     "        return normed"
    ]
@@ -109,8 +112,10 @@
    "outputs": [],
    "source": [
     "def softmax(inputs, name):\n",
-    "    W, b = load_weights(name)\n",
+    "    weights, bias = load_weights(name)\n",
     "    with tf.variable_scope(name):\n",
+    "        W = tf.get_variable('W', initializer=weights)\n",
+    "        b = tf.get_variable('b', initializer=bias)\n",
     "        return tf.nn.softmax(tf.matmul(inputs, W) + b)"
    ]
   },
@@ -372,7 +377,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on CIFAR-10 test data: 92.3300027847%\n"
+      "Accuracy on CIFAR-10 test data: 94.3300008774%\n"
      ]
     }
    ],
@@ -437,7 +442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test your own images by changing the file path `IMG` below! (Note that your images must be 32x32)"
+    "Test your own images by changing the file path `IMG` below. (Note that your images must be 32x32)"
    ]
   },
   {
@@ -468,7 +473,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAH/1JREFUeJztnWuQnGeV3/+n79MzPffRaKSRLMkSlo3BMlEUyLIs4LVj\nO0uAL65layl/cK33A6HC1uaDi1QF8iXFpgJbfEioMsG13hTxQsUQnKyTje0FjDfEy8j4IluSdRtZ\nGo00us21Z/p68mHaKVl+/u+MdemRef6/KpV6ntNPv6effk+/3c+/zznm7hBCxEdqrR0QQqwNCn4h\nIkXBL0SkKPiFiBQFvxCRouAXIlIU/EJEioJfiEhR8AsRKZmrmWxm9wL4NoA0gP/k7t9Iun9Pqejr\nh3qDtnJ5kc6rVavB8bSl6ZzOYpHacrkstTW9QW1ObEm/kkz6/WQ2l6e2VIo/t0a9yY9HfLEEP5L8\nt4SJjQb3gz1zT1iRpLVKpfl1KpvJUVujGfbRjD+eN7kn8/Pz1FZZWqI2JP6SNmzLZvg5MDDQHxw/\nceYCLszMJ73c/58rDn4zSwP4DwDuBnASwK/M7Cl3f4PNWT/Ui//4bx8K2l57aR891sljE8Hx7kKJ\nztlzxy5q27plA7UtLk1TW7UZfuGX6jU6p9bgL/ropu3UViyG3yQB4OL5WWpr1MIne9q4H/VqhdrS\nWX6KLCzMcT8QfqOs1sNv5ADQSPgc2tnVRW3r12+kttn5cEDmsh10Tm2JXwB+8fPnqe3YoTeprdng\nz9uIbf26PjrnD7/4B8Hx+7/0Z3TO5VzNx/49AA67+1F3rwL4KwCfvYrHE0K0kasJ/o0ATlzy98nW\nmBDifcB13/Azs4fNbMzMxqbnFq734YQQq+Rqgn8CwKZL/h5tjb0Dd3/U3Xe7++7eUudVHE4IcS25\nmuD/FYAdZrbVzHIAfh/AU9fGLSHE9eaKd/vdvW5m/xzA32BZ6nvM3V9PmpNKp1DqDEtwXQm7uX19\nA8Hx08cn6Zz//tdPU9udd9xGbXfd/XFqQ6YnONzwOp1ycY5LQ+Pj49S2adMOatuwYZQf7/yF4Hit\nxnf0Uyl+DWgkiEY9A4PUVquHj9ckKgDA5SsAmCvzr4wXz5+jtlIpvGM+n/C6/Oynv6C2QwcOUVsm\nzRert4crU9MXzgbHe/r4+laIqpOgUr6Lq9L53f1pADzKhBA3LPqFnxCRouAXIlIU/EJEioJfiEhR\n8AsRKVe12/+ecQfqYamnr9RNpy10lIPjmYSsOGQK1PTLv3+F2qYTklXuve9TwfFiNz9WqYsvcTbL\nn/PkJJcxyws8SWT9uvVhwxKXofIJPk4nZFtaQtbZ0OBQcLxaC7+WALCwwBOWKovcj0xCht789MXg\n+LN/81M659ixt6itkOfZot3d/PWsVLn/F6bDz7ujxJO7csWwdGgJ2aCXoyu/EJGi4BciUhT8QkSK\ngl+ISFHwCxEpbd3tT6dS6CGJPceqvP5ZeT68Q7y0yMtn5XM8fTjbwZMs3jg4Tm3V5rPB8X9y76fp\nnMFBnpxRyPP33nSKl5maneFJLm8c2B8cLxb543V28rWqpXl9vMV5vjtfbYZVnZTz12xhjj9eqcgV\nFSTUEnzufz8THD/65mE6p1DgSWYdCWXNmjWe4FVe4Od3iqxxKsvVrCZYHcpVle9bfvxV31MI8RuF\ngl+ISFHwCxEpCn4hIkXBL0SkKPiFiJS2Sn0GIEvaFhXzXNZgLZLKCVLfbEKSSG8vT8DIJ0g5J0+H\na8U997c/p3N+5xO8JmBSLb6ehESn7oSEjxm2Vgk18JYavL6fJSRP9Q+GaysCQG2JJGMl5J0M9PEO\nNYsJMuDpk+GOTgBw+EC4gVRPZ7geIwAslrksd3aWr2MtqX1ZhreIS6fDi5Lv4BJs8xpct3XlFyJS\nFPxCRIqCX4hIUfALESkKfiEiRcEvRKRcldRnZuMA5gA0ANTdfXfS/Zv1OuZIa6WNw+vovMVyWDaq\nVnktO8twmeT4BK+Pl8vzrKhNo+F2UqeJBAgAP/vZ89T2mc98htoGB/h6nJg4RW25Qjj7rbefS1vl\nCq+r10jx/k/dPXyNGx3h60o6obVZhciUAPDW8eNXNO8ju+4Mjh984yCdMzlxgtqK3QnrmCA9I8ND\nrYe0KRsZHqZz6vXwOjqR0oMurfqenE+5Oz/7hRA3JPrYL0SkXG3wO4BnzWyvmT18LRwSQrSHq/3Y\n/3F3nzCzdQCeMbMD7v6OL7mtN4WHAWBkkP9kVQjRXq7qyu/uE63/pwD8GMCewH0edffd7r67r8Qb\nHggh2ssVB7+ZdZpZ6e3bAO4BsO9aOSaEuL5czcf+YQA/NrO3H+e/uPv/Sp7iSKfCmU+5dIIU0hUu\nqHisfJbOWWrwzKxak8shNSKhAMCpU2Fp8R/supXOueuu36G2VEKxxRNvjVMbjKfGsbZQnuLPa6nC\npbJajctXk+UL1JbPhbPYUqSwJwDUF3l2YSbDr1PdQ1wS+8D2W4LjMzO8LdvRcS71MYkNADyhOGku\nIatvy6YNwfHBvgRZcW46ON5MWN/LueLgd/ejAO640vlCiLVFUp8QkaLgFyJSFPxCRIqCX4hIUfAL\nESltLeAJLGf2hUjqW3fHh28Pjp8+y+Wa89Nc6ptfCsthADAzy+WrdUMjwfGtW2+ic06+xbPRkgpW\nsqKOAJBNKHbaVQr3IZxb4ms1PcPzstI1njmZIRIsAOQ6wkVG5+a5Hx053k9weDi89gBQLXMfC53h\n9djzsY/ROW8lZH2ePn2a2tIZLt2mjUtw/b1hH1NNLn12kMhN2eqz+nTlFyJSFPxCRIqCX4hIUfAL\nESkKfiEipa27/Q6ANTSqJOwqDw8PBccXFnhCSqEjXMsOAOYXuRLQXeI76Tdv2xR+vIVwkgUApBN2\nxOcSWlB1dPCd70Int83NkoSPNN9tTjX52tcXePJUucZ37r0abmtVTyhz18hxY0chvCMOAOkiX4+q\nhXfg+0c20jmf+PRd1Pbkk09SW0c+R21JSsDGkXC9xo4cn1OpECXgPdTw05VfiEhR8AsRKQp+ISJF\nwS9EpCj4hYgUBb8QkdLmxB4D0mEJrg6eyNLVHZbLBgZ5Yswb+3k7pv6hcHskAOjs4nXTioXwclWX\nuHQ4k9CeanaWv/f29w1wP0pcPnQjbZzAZbTODl5fbmmOz0snvGYz588ExxtNfqzuPt6irNDJT1UD\nf0xkw+dbNssl3XWbN1Pbb9/FZcCTx49S2we2b6O27du3B8eT6ifyxC8uD16OrvxCRIqCX4hIUfAL\nESkKfiEiRcEvRKQo+IWIlBWlPjN7DMDvAZhy99tbY/0AfgBgC4BxAA+4+8WVHqsJw0IzfMiUJ7Rj\nKoWztu6//146p17nmWpTZ3mNtqF+LgPW6+Xg+NwCl2SsnNBaq8J9bCSsRyrDH7NGfGTjANDZxWWv\nGskSBIBcvpPa5smaDI7weof9g1zqS+V5Vt+5i+EMQgCYq4UzJ0sJkm7PEPfj5ltv4/MSajLeuiMs\n5wFApiO8/pbQlq3RYFma11bq+wsAl0fZIwCec/cdAJ5r/S2EeB+xYvC7+/MALi9p+1kAj7duPw7g\nc9fYLyHEdeZKv/MPu/vbn51PY7ljrxDifcRVb/i5u2O5SE8QM3vYzMbMbGx6ln/vFEK0lysN/jNm\nNgIArf+n2B3d/VF33+3uu3u7i1d4OCHEteZKg/8pAA+2bj8I4CfXxh0hRLtYjdT3BIBPAhg0s5MA\nvgbgGwB+aGYPATgO4IHVHCyVyaE4tCVoa1R5gcnphXB7raGRDXTOPff8LrWNjb1AbekMKzEKVCqk\nKGWTF27s6eWyUUcXz9zrHeTtqTq6uOwF8s3q3FneZmpmmkuO3SleEDJX4BJhnhTVLHXz59z0pMw9\nbuvq7ubzsuHXxlL88RarfD2Q48950/ZbqK2RkEVYrofluWZC+7IUUQHdVn89XzH43f0LxMRzG4UQ\nNzz6hZ8QkaLgFyJSFPxCRIqCX4hIUfALESltLeDZRBplDxef7ChyVzrz4Qyx6hxPJBzdxHuxFXIf\npba9L/0faitXw7JXOkHG6U7IVCuV+K+ie3p4hthQQvZYR340OF6vheVSADh8cB+1zTV5xmJ/k/9o\nq9Qd9rHa4Jlqp06coramcTm1u49nYvYOhvs8dnbyIqgz8+HiowBQKPVSWz7H12Opygu5DvSEfVxM\n6CnZ1xt+zpbm63Q5uvILESkKfiEiRcEvRKQo+IWIFAW/EJGi4BciUtou9S2mwhlY0xdn6Lz1PWEJ\nZfNNXOLZt/cX1FatVqitp4dniC2cDUtA3f08U21+kUs8py9M8Hlzx6htpJ/LTbfuCEt9jTp/n5+f\n4zLgzDzPcDs2eZjaBvrDMmYVvHDm1AVeLPTESS4DJhU03XjTluD45q3hcQAYGQ2vIQB0dfO1z2R5\nQdMUeIaekf6VnV08PHOl8DpahsvO7/ZJCBElCn4hIkXBL0SkKPiFiBQFvxCR0tbd/myugHWbdwZt\nb+57mc47ejJcHLgjzXfZT53iu8PVMi02jPXr11PbImkBdvjoUTrn9UMJtfNmeX28pQSVYP0A33E+\nv+fDwfE7b+Ntsj7x25+mtqkF7uPEBFcrJifDysgLvxyjc85d4Ila4+Pj1HZxhtddHBgO76T/wRf/\nkM7Z+cEPUlu+yNWKQidXnyzD6y7OlcNrXCzyx2saCd2E2oTvuuuq7ymE+I1CwS9EpCj4hYgUBb8Q\nkaLgFyJSFPxCRMpq2nU9BuD3AEy5++2tsa8D+CMAZ1t3+6q7P73SYzXcMV8Jt+Ua3sClqJmT4Tpy\nvxrbS+cszM9TW2c+S21m4dZJALCZJIm8NfUanXNq8iy1Ves8CSOXkCRy6vQ5atv7Ulgy3TrKZaM7\n/vFuatvSwWsQNhtcBty7N/zaPP00P00s4Vp0x647qa3e4HUG8x3hhJrRhOSdQp7X4ssUeIJOM0Fm\nW1ri7ei6usM1/MqVhGszqWnYdH7+Xs5qrvx/AeDewPifu/uu1r8VA18IcWOxYvC7+/MALrTBFyFE\nG7ma7/xfNrNXzewxM+O1pIUQNyRXGvzfAbANwC4AkwC+ye5oZg+b2ZiZjU1f1AcIIW4Urij43f2M\nuzfcvQnguwD2JNz3UXff7e67exOaKwgh2ssVBb+ZjVzy5+cB8JYvQogbktVIfU8A+CSAQTM7CeBr\nAD5pZrsAOIBxAH+8moOlvIl8NSzBlUrh7CsAqDTDNfcuvHWCH2yef8Xo6eU137r7uPw2T9on3TLC\nMwEv3nILtR05wbPYkOZyU41kFwJAR084e6w0PEjnnK3MctsSP9ZNozuo7WN33x8cTxV4VtxfP/UD\naqs3E3w8P0ltm28Kr//Wm8LZpQCwVOHngHF1E139/LzK5HnmYaURfm6W4nJvk9ZkTHDwcp9WuoO7\nfyEw/L1VH0EIcUOiX/gJESkKfiEiRcEvRKQo+IWIFAW/EJHS1gKeAJC28PtNvVKmcxr1sNTn4G23\nmk2e6WWs+CEAOM/4m5kNtxRLpficpIKgh0/wjL96k7fQGlzHfyx13333Bce7OvkvsMfHeUHT4qZt\n1HbwwCFqu/2WcCHR3bt5BuFgH8+Y+8l/e4LatmzZQm2/e88/DRuMS2+NhCzBapkXVk0Xwpl2yzb+\n3LKZcEzMEWkZALJpfs6tFl35hYgUBb8QkaLgFyJSFPxCRIqCX4hIUfALESltlfq82UR1MZzVd/TY\nQTpv4s1Xg+ONOpcHu0tcWil2dVNbUuHMJsm+qnH1Bxs3b6S2uwe4ZDd+8iS1ZTJcUsoWwhlp3X1c\ncjw1cZ7afvE/f05ttQqXxMbfDPt/xwdvo3Nu/9Ad1FZZ5Fl9A4NcxtyybXtw/O/+76/pnA2jN3M/\nnIdM9wD3o1nn2XYL1bCsmzJ+LnYUw1mwqdTqr+e68gsRKQp+ISJFwS9EpCj4hYgUBb8QkdLW3f56\nrYpzk8eDtmMHecurC6eOBsd7c3ybvaPAawLm8wk7+s7rt83NhHe3c31cPZir8eSjvv6EOn02QG2L\nS3yXfbESTgb5/hM/onP2vvgKtaV7u6htdGQDtf3dxC+D47kUr3PX181fl23bb6W2Nw/tp7bDR/82\nOD60nqswmSxveXVhOpzcBQD5DE+2qSe08lokLezyBX5tPnfudPg4dX5uXI6u/EJEioJfiEhR8AsR\nKQp+ISJFwS9EpCj4hYiU1bTr2gTgLwEMY7kX0KPu/m0z6wfwAwBbsNyy6wF3T+g/BVQWF3DkjbGg\nbX56gs4rZsNJEYUMl41SCZJSIcvlvHRCbbT58kJwnNUYBIB1W7kcdno6oYZfnddv27hxlD/mmfBj\nnj7Dk3cmpxJetjleS/D8FG+JduF8uC7gnR/iiT28qh6AhISaV195ndpqtXC7saGEFmtTZ3gbuGaa\nS8h1ciwAqDb5dTabDiehZTL8OadT4WNxkfLdrObKXwfwp+5+G4CPAviSmd0G4BEAz7n7DgDPtf4W\nQrxPWDH43X3S3V9q3Z4DsB/ARgCfBfB4626PA/jc9XJSCHHteU/f+c1sC4A7AbwIYNjd326PehrL\nXwuEEO8TVh38ZtYF4EkAX3H3d1RWcHcH6Q1sZg+b2ZiZjc2XefENIUR7WVXwm1kWy4H/fXd/+0fi\nZ8xspGUfARDc4XH3R919t7vv7iry37ILIdrLisFvZgbgewD2u/u3LjE9BeDB1u0HAfzk2rsnhLhe\nrCar77cAfBHAa2b2cmvsqwC+AeCHZvYQgOMAHljpgZqNKhYuhrP66mWeLZVLhQWMpOy8Yo5no2Uz\nvL7f8ntdGJa0lSsmLGMzQf5Z4hLhqVMJLbSKg9Q2NxvOdFw3zLdk8h28fmKtySVTOL927Nz5AeLH\nED9WjWek/frAAWqrLIWz4gDgQx/+YHA8BZ4RenH6HLXt2HkntWXT/DyYW+DnQToXlp5nK9N8TpZJ\n0rxW4OWsGPzu/gK4fHjXqo8khLih0C/8hIgUBb8QkaLgFyJSFPxCRIqCX4hIaWsBT0MDOYTbdS3W\n5ui88mI436sjIVOqWeyhtiRJKZvmuWXdPWFJZp60WwKAI4e4ZDewYTO19XVz+erE8Ulq27kz3PLq\nyJFwEVQA2LKNy4DnL/L1SKW5j+uGw63Ipmd5duGBN3khzjOTfB2HhtdRW3dvKTheS8iarFT4udio\n8V+p1ir8PChkw34AQN3CcmqGSNwAkM6Scz9Bqr4cXfmFiBQFvxCRouAXIlIU/EJEioJfiEhR8AsR\nKW2V+hr1GmamTgZt9SrPRqrOh+Wmc2Uu2RUzOWrr7eN1BQb7e6ltU20kOD5dDsuXANBM6N9WSfC/\nK8/7/3Xk+ct28UI4Iy2fT8j2SnGJKp/ja2UpLvU1PZyxWK2Fi6ACwPgJntmZBn89N9/EC5r2EKnv\n7DletLSnxLM+qxXu/9wMz8KbK/MMzslz4fNn/Sh/XqWecEarNxPLoL4DXfmFiBQFvxCRouAXIlIU\n/EJEioJfiEhp625/OpVCbzFcW282IWHi/Ey4LVTnEG+FVeziO7b1Jt9lbyApWSWcAFOscIXg0JEz\n1FYo8R39vi5en/DsRb6rXGmGd5UHBvmx/lFfOBkIAOoNXnOvs4ufPg0P72DnC3zOjo07qK2vZ4Da\n8ln+mLTjlfPXOZPQBg6ekOiU0HBsaZGrBCffCte1HN3ME7/K5XBiUrO5+hp+uvILESkKfiEiRcEv\nRKQo+IWIFAW/EJGi4BciUlaU+sxsE4C/xHILbgfwqLt/28y+DuCPAJxt3fWr7v500mM1G46FmbDE\nsjjP5bdSKZyc0dnLk04qTV6jzdNcmqsn1AWcOh9OBjly9C06J5XiCSlLZZ5Q01Hi8/oTnncd4XUs\nl2eD4wCQSqgVV6vxeecqXJ7t7glLraObuHy1cXQjteXS4fqJAFCvJrREq4Ylx0aDt+vq6+f1Hws5\nHjL1Gj/n3jxwmNpeeH4sOF7qC9dBBICdt90aNvg1bNcFoA7gT939JTMrAdhrZs+0bH/u7v9+1UcT\nQtwwrKZX3ySAydbtOTPbD4C/RQsh3he8p+/8ZrYFwJ0AXmwNfdnMXjWzx8ys7xr7JoS4jqw6+M2s\nC8CTAL7i7rMAvgNgG4BdWP5k8E0y72EzGzOzsYUK/54lhGgvqwp+M8tiOfC/7+4/AgB3P+PuDXdv\nAvgugD2hue7+qLvvdvfdnQkVaIQQ7WXF4DczA/A9APvd/VuXjF9a0+rzAPZde/eEENeL1VyKfwvA\nFwG8ZmYvt8a+CuALZrYLy/LfOIA/XumBvGmo1cI17SrVhDZDqfB71Nwil5p8nj9e8zx/2vuPTVDb\nG68fDI4PDa+nc0ZGwnX/AGB2ntesK3VyHytN/vVpZiEse1WSZMWEDMIm+BpvHuXPbcvNW4LjA0OD\ndE6tzp9XUmm6UrHAH3MxvB7ZLJdSB/u4j5mEtlu1Br+WLszzmoGVpXB7sHqVS4cnT4ZrYVZrXPa8\nnNXs9r8AIBRJiZq+EOLGRr/wEyJSFPxCRIqCX4hIUfALESkKfiEipa2/uqk3HOfPhyWnhvH3oWYm\nLAEtTHOpLLvIZZITZ3kxxSOHwxIKAJyeOBsc/5M/+Wd0joG3aZqY5NmAnT1cisoUeAuwzo7wvGx+\nHZ2TynCpbKjIs+l27tzJ560PFzut1Lict5Qg3Ra7uI+FDl6sdX4uXPy1VOKZe5mEDMJinvuRynLJ\ndMfNPJtxZj58jmzbuonOOTV1PjjeVLsuIcRKKPiFiBQFvxCRouAXIlIU/EJEioJfiEhpq9TnMNTT\nYZkqneXySiobLko4uxQuzggAp6a4LZ/jGX/ZTi6J7doTLpo4Pc8lqs4if3/1hLfeMsn0AoC+Lt63\nLuXh55ZLc4kKKb723d3h3ooAkErx02f6YlhOTSXIaB2dvBhUNqEWRKPB++7V62HbYH9YigSAbJrL\nrI0al9LcuKzb359QbJYUST16LJxFCgBlcqhGQmbk5ejKL0SkKPiFiBQFvxCRouAXIlIU/EJEioJf\niEhpby1tczTSRLZb5AUmcyDZUjkuy1UaXK4pFHgPtDxXojBfC+srY6++HBwHgN27PkBtg+u4ZFep\n8szDRkLiVq0ZXt9KnRd2LJBMQABYTHhdZme4j02EJaeOBOmzK0FyXHIuYdVJ1icAVEmviPIsl+WK\nA1yWs6Ts0zrPJB3ZwM+5zaNDwfFqjUvIw8M3Bcez2dWHtK78QkSKgl+ISFHwCxEpCn4hIkXBL0Sk\nrLg1aGYFAM8DyLfu/1/d/Wtm1g/gBwC2YLld1wPuznsSAag3G7hYDtceS2qD5MTWVdpA5wxnebJH\nTx+v3zYxcYTaDh4M7+rf/al/SOd4mvuRzvFafOVZvoOdna9RW3d/uNVUqsr9SNjARqMRVg8AYGGB\nKwGNZjjByI0/Xq7AbcVOnpiUz/DTeJ4kXRXTvO5fyvnrks9y23xCMpbl0tS2fUd45/7IcV6jcn42\nbEtKcrqc1Vz5KwA+7e53YLkd971m9lEAjwB4zt13AHiu9bcQ4n3CisHvy7ydH5tt/XMAnwXweGv8\ncQCfuy4eCiGuC6v6zm9m6VaH3ikAz7j7iwCG3X2ydZfTAHiCtBDihmNVwe/uDXffBWAUwB4zu/0y\nu2P508C7MLOHzWzMzMYqtdV/HxFCXF/e026/u08D+CmAewGcMbMRAGj9P0XmPOruu919dz7LNz2E\nEO1lxeA3syEz623d7gBwN4ADAJ4C8GDrbg8C+Mn1clIIce1ZTRbACIDHzSyN5TeLH7r7/zCzXwL4\noZk9BOA4gAdWeqBarYrJqYmgbeOmcH08AJgl7YzOXAy3zwKAepMniViO16Wrkxp4AFDq6Q6Od3Zz\nGWp6bpo/XkIrrM4ilz5n5xLaWvWE/W86l9EWyzxBp9jg0lY2nZAc09UbHO8u8Tp9mTT/ZGgJ16mO\nhMSkQiGcpJPP8ddsaYknQeUTWqVlMtzHC3NcBR8YDK/JiUn+uszMhs+r9yL1rRj87v4qgDsD4+cB\n3LXqIwkhbij0Cz8hIkXBL0SkKPiFiBQFvxCRouAXIlLMEySga34ws7NYlgUBYBDAubYdnCM/3on8\neCfvNz9ucvdwUcDLaGvwv+PAZmPuvntNDi4/5If80Md+IWJFwS9EpKxl8D+6hse+FPnxTuTHO/mN\n9WPNvvMLIdYWfewXIlLWJPjN7F4zO2hmh81szWr/mdm4mb1mZi+b2Vgbj/uYmU2Z2b5LxvrN7Bkz\nO9T6n6e/XV8/vm5mE601ednM7m+DH5vM7Kdm9oaZvW5m/6I13tY1SfCjrWtiZgUz+3sze6Xlx79p\njV/b9XD3tv4DkAZwBMA2ADkArwC4rd1+tHwZBzC4Bsf9BICPANh3ydi/A/BI6/YjAP5sjfz4OoB/\n2eb1GAHwkdbtEoA3AdzW7jVJ8KOtawLAAHS1bmcBvAjgo9d6Pdbiyr8HwGF3P+ruVQB/heVioNHg\n7s8DuHDZcNsLohI/2o67T7r7S63bcwD2A9iINq9Jgh9txZe57kVz1yL4NwI4ccnfJ7EGC9zCATxr\nZnvN7OE18uFtbqSCqF82s1dbXwuu+9ePSzGzLViuH7GmRWIv8wNo85q0o2hu7Bt+H/flwqT3AfiS\nmX1irR0CkguitoHvYPkr2S4AkwC+2a4Dm1kXgCcBfMXdZy+1tXNNAn60fU38Kormrpa1CP4JAJsu\n+Xu0NdZ23H2i9f8UgB9j+SvJWrGqgqjXG3c/0zrxmgC+izatiZllsRxw33f3H7WG274mIT/Wak1a\nx37PRXNXy1oE/68A7DCzrWaWA/D7WC4G2lbMrNPMSm/fBnAPgH3Js64rN0RB1LdPrhafRxvWxMwM\nwPcA7Hf3b11iauuaMD/avSZtK5rbrh3My3Yz78fyTuoRAP9qjXzYhmWl4RUAr7fTDwBPYPnjYw3L\nex4PARjActuzQwCeBdC/Rn78ZwCvAXi1dbKNtMGPj2P5I+yrAF5u/bu/3WuS4Edb1wTAhwH8unW8\nfQD+dWv8mq6HfuEnRKTEvuEnRLQo+IWIFAW/EJGi4BciUhT8QkSKgl+ISFHwCxEpCn4hIuX/AZsw\nZ8udcBPEAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f0e5c06ef98>"
+       "<matplotlib.figure.Figure at 0x7f3d87272048>"
       ]
      },
      "metadata": {},
