--- a/CNNs/convnet.ipynb
+++ b/CNNs/convnet.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -44,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def conv(inputs, n_filters, name):\n",
+    "def conv(inputs, name):\n",
     "    weights, bias, beta, gamma, mov_mean, mov_var = load_weights(name)\n",
     "    with tf.variable_scope(name):\n",
     "        W = tf.get_variable('W', initializer=weights)\n",
@@ -61,7 +61,7 @@
     "                                 padding='SAME')\n",
     "        activations = tf.nn.relu(convolved + b)\n",
     "        normed = tf.nn.batch_normalization(activations, mov_mean, mov_var, beta, gamma, 1e-7)\n",
-    "        return normed"
+    "        return normed, W"
    ]
   },
   {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +106,7 @@
     "        b = tf.get_variable('b', initializer=bias)\n",
     "        activations = tf.nn.relu(tf.matmul(inputs, W) + b)\n",
     "        normed = tf.nn.batch_normalization(activations, mov_mean, mov_var, beta, gamma, 1e-7)\n",
-    "        return normed"
+    "        return normed, W"
    ]
   },
   {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -129,12 +129,12 @@
     "    with tf.variable_scope(name):\n",
     "        W = tf.get_variable('W', initializer=weights)\n",
     "        b = tf.get_variable('b', initializer=bias)\n",
-    "        return tf.nn.softmax(tf.matmul(inputs, W) + b)"
+    "        return tf.nn.softmax(tf.matmul(inputs, W) + b), W"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -212,32 +212,32 @@
    "source": [
     "img = tf.placeholder(tf.float32, shape=[None, IMAGE_HEIGHT, IMAGE_WIDTH, COLOR_CHANNELS], name='img')\n",
     "\n",
-    "conv1_1 = conv(img, 64, 'conv2d_1')\n",
-    "conv1_2 = conv(conv1_1, 64, 'conv2d_2')\n",
+    "conv1_1, w1_1 = conv(img, 'conv2d_1')\n",
+    "conv1_2, w1_2 = conv(conv1_1, 'conv2d_2')\n",
     "pool1 = pool(conv1_2, 'pool1')\n",
     "\n",
-    "conv2_1 = conv(pool1, 128, 'conv2d_3')\n",
-    "conv2_2 = conv(conv2_1, 128, 'conv2d_4')\n",
+    "conv2_1, w2_1 = conv(pool1, 'conv2d_3')\n",
+    "conv2_2, w2_2 = conv(conv2_1, 'conv2d_4')\n",
     "pool2 = pool(conv2_2, 'pool2')\n",
     "\n",
-    "conv3_1 = conv(pool2, 256, 'conv2d_5')\n",
-    "conv3_2 = conv(conv3_1, 256, 'conv2d_6')\n",
-    "conv3_3 = conv(conv3_2, 256, 'conv2d_7')\n",
+    "conv3_1, w3_1 = conv(pool2, 'conv2d_5')\n",
+    "conv3_2, w3_2 = conv(conv3_1, 'conv2d_6')\n",
+    "conv3_3, w3_3 = conv(conv3_2, 'conv2d_7')\n",
     "pool3 = pool(conv3_3, 'pool3')\n",
     "\n",
-    "conv4_1 = conv(pool3, 512, 'conv2d_8')\n",
-    "conv4_2 = conv(conv4_1, 512, 'conv2d_9')\n",
-    "conv4_3 = conv(conv4_2, 512, 'conv2d_10')\n",
+    "conv4_1, w4_1 = conv(pool3, 'conv2d_8')\n",
+    "conv4_2, w4_2 = conv(conv4_1, 'conv2d_9')\n",
+    "conv4_3, w4_3 = conv(conv4_2, 'conv2d_10')\n",
     "pool4 = pool(conv4_3, 'pool4')\n",
     "\n",
-    "conv5_1 = conv(pool4, 512, 'conv2d_11')\n",
-    "conv5_2 = conv(conv5_1, 512, 'conv2d_12')\n",
-    "conv5_3 = conv(conv5_2, 512, 'conv2d_13')\n",
+    "conv5_1, w5_1 = conv(pool4, 'conv2d_11')\n",
+    "conv5_2, w5_2 = conv(conv5_1, 'conv2d_12')\n",
+    "conv5_3, w5_3 = conv(conv5_2, 'conv2d_13')\n",
     "pool5 = pool(conv5_3, 'pool5')\n",
     "\n",
     "flattened = tf.reshape(pool5, [-1, 512])\n",
-    "fc6 = fc(flattened, 'dense_1')\n",
-    "pred = softmax(fc6, 'dense_2')"
+    "fc6, w6 = fc(flattened, 'dense_1')\n",
+    "pred, w7 = softmax(fc6, 'dense_2')"
    ]
   },
   {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -383,14 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on CIFAR-10 test data: 94.3300008774%\n"
+      "Accuracy on CIFAR-10 test data: 94.9999988079%\n"
      ]
     }
    ],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHNtJREFUeJztnW2MnNd13/9nZmd39v2NyxeRFCk6kgJXrWlrIbuIEbg1\nEqhGANtfhPhDoA9GlA+pUQPpB8EFavebW9QO/MkAXQtRCtexUduwURhtbTWAEKCivbRlSY6cxJJI\nStRyl+RyyX2ZndfTDzMsyPX9nx3uyyyZ+/8BBGfvmfs8d+7cM8889z/nHHN3CCHyo7DfAxBC7A9y\nfiEyRc4vRKbI+YXIFDm/EJki5xciU+T8QmSKnF+ITJHzC5EpfTvpbGZPAvgKgCKA/+LuX4yef+DA\nAT958sROTrl5BNRy7twunuYWj7OTbfNwj/NfV4Y/vAyMjrQt+iVnZGu1+DAKBX7tYMdsNJu8T3Cy\nYrEYjIOvA7ZGLOhigdGCcxUsuJZGa4Stg3PR60pzHudx1a921dG2+/NeMysC+HsAvwfgHQA/BfAp\nd/9b1md29nH/6U/OJm3RONibEb9Je/Clho0xWkkBzUaD2wIn2Y6tXq/TPo1gHJUqNaFcLt/1MZeW\nlmifWo2fbGRkhNqGhwepja2RUj//MOnr49fEgYFSYBu463EAgHv6PQs/TAiz+CDmfK6rBbkTD3kC\nwK/d/U13rwH4KwAf38HxhBA9ZCfOfxTA27f9/U6nTQhxH7DnG35m9oyZzZnZ3JUrV/f6dEKILtmJ\n818CcPy2v4912u7A3c+4+6y7z87MHNjB6YQQu8lOnP+nAB42s4fMrB/AHwL4we4MSwix12xb6nP3\nhpn9awD/C22p7zl3/2XU59w5QyGQbIKTsTHcdR8A296dZ/02KpWgCz9Xq8U/e6N+EWy3v1ar0T6h\nrc7HGKkEGxsbyfa1tTXaJ3rJrUAGjMbB+vUPDNM+pRLf0Y9s0XpsNrhCY610v8Ie35XvSOd39x8C\n+OEujUUI0UP0Cz8hMkXOL0SmyPmFyBQ5vxCZIucXIlN2tNt/95zDtj5vmAQURaNFUl8QqbYdarVA\nvoykvmCIsYzGA2DW19dJn7T0BsRBP9eWVqgtDAgi8mckKw4N8QCdKIIwlvrStps3b9I+h48cpLbh\nIW6LFlYR25C4AxxMOuw+UE9XfiEyRc4vRKbI+YXIFDm/EJki5xciU3q62/+BDzyOl87+JGmLdnOL\nRbJjHqVGCnb0t5siiwWJbDfoJNqBX1nhu+zRTjXb7Y922aOAlIsXfyNK+/8TqQTValqRiAKWRkd5\nqi72ugBgeJgH6bC1EwXoTEyOUVsrWFhx2q3dlZgajfTx/IPdH0NXfiEyRc4vRKbI+YXIFDm/EJki\n5xciU+T8QmRKjwN7gCYrnxSUQWIiSTNQT9bXeV69tbXrQT8uKTHZ7vp1frztSn1RrrvItp2Amkiq\nvLpwhdq2I4tGZbeWl/k8Xrt2jdpGR0epjVXzOXXqFO3TqPP5iOa+VOXvpxmXRVmFoGIhqiqUlmct\nKGG3GV35hcgUOb8QmSLnFyJT5PxCZIqcX4hMkfMLkSk7kvrM7DyAFQBNAA13nw2f/7Nz6C/d/efN\neiUtU117l8s/ly//KrBdprbl5WVqY5FqUZRdFMUWRTJGtkiaY5IekwAB/roAoFnjUmUk9bHXHZXk\nWl3lx1taWqK2kREeDTgxMZFsj8YerYFK5UFqO3qUV6gfH+eRgtutHrdTdkPn/xfurtrbQtxn6Gu/\nEJmyU+d3AD82s3Nm9sxuDEgI0Rt2+rX/w+5+ycwOAviRmf3K3V+8/QmdD4VnAIDfLQkhes2Orvzu\nfqnz/yKA7wF4IvGcM+4+6+6zMzs5mRBiV9m285vZsJmN3noM4PcBvLZbAxNC7C07+dp/CMD3OpJO\nH4D/5u7/M+pQf9/7MP+//0/SFkVLLf7ilWT7xYsXaZ/IduUKj1SLJDEmsUXJICOpL+o3OMhLVw0M\nDFAbS8a5UeVRfVH5r74gSiyKWGRlo6Kovu0kBAVi6ZNJpouLi7TPyMjb1BZFF0bzceIEl4PLG+Vk\ne5RYtVBIn8v/efflurbt/O7+JoD3bbe/EGJ/kdQnRKbI+YXIFDm/EJki5xciU+T8QmRKTxN4rq6u\n4aWXXkraotp0CwsLyfZLl3gduUjOi2SjSH4rl9OSTBSBF0WPRQk8o4SbQ0ND1MaktEhGiySqSKqs\n1/kYt3O8iEj2isbPXnc0ju1Kwc0mH+PqKk8MOz09nWwfHx+nfZgtmKbfQFd+ITJFzi9Epsj5hcgU\nOb8QmSLnFyJTerrbv7a2hrNnzyZtUaDFjRs3ku1R7jy2Mw/EO/qR6sCCbaL8ctGu/YMP8gwH0Y5+\nxNTU1F2PI8pZNxwEEUW77O+++26yfbs5DaPgnSgIipVfi5SWSFkYGhqmtjfffIvaXn+d55RkeQYP\nHz5M+7B5jErHbUZXfiEyRc4vRKbI+YXIFDm/EJki5xciU+T8QmRKT6W+RqNOg3S2ExwzPz9P+0Ry\nHpNWAKCvj08Jk1eYvAbEQUSR7BVJjtH43/Oe9yTbh4e5RBVJpleD0mYzMzwf84EDB5LtUdBMFAQV\nyXnR2rl2jcuwjEhWjHL4RfkJI/mQrZEoGGugPz0f9XqUV/FOdOUXIlPk/EJkipxfiEyR8wuRKXJ+\nITJFzi9Epmwp9ZnZcwD+AMCiuz/WaZsC8C0AJwGcB/CUu28ZTlQs9mF6ajJpi3KjVdbTpbxaTS5r\nTB3kMlRU7iqKilq5mY4uNFKaaismxseoLZLRjhw5Qm0PnTyRbI+i+uBc2joy80+pbTuy6MGDB2mf\nSOp74403qG1hgUeEbienYSTLrdzkZeUi6TaSKquF9Fgq61wmHhtNy72FQvc5Eru58v8FgCc3tT0L\n4AV3fxjAC52/hRD3EVs6v7u/CGDzLyU+DuD5zuPnAXxil8clhNhjtnvPf8jdb/287jLaFXuFEPcR\nO97w8/YNEr1JMrNnzGzOzOYqFZ67XAjRW7br/AtmdgQAOv/THRd3P+Pus+4+Ozi4vdRUQojdZ7vO\n/wMAT3cePw3g+7szHCFEr+hG6vsmgI8AOGBm7wD4PIAvAvi2mX0awAUAT3VzssHBQTz22GNJG0v4\nCLQTf6aIZKOHHnqI2i5cuEBt0TgYY2NcsmNjB+IosChyL0pOyqImo4SV0fi3+9qYDDg6Okr79Pf3\nU1skwV68+Da1sdd99epV2sdbXC5bXV3l/QKJcGyMv58sArVS4VLf5GS6xFer1b3svKXzu/uniOmj\nXZ9FCHHPoV/4CZEpcn4hMkXOL0SmyPmFyBQ5vxCZ0tsEnvU6ri6kE0I2a1zWGB1iyQp5ZFZllSfA\nfPfti9R2+dI71HboQFpe+eDs47RPJP9E0XnsNQNAMYgibDXSc1IIIvdGBrl0eOMGl9iiJKksio3V\nXQSAkZERanvggQeo7fx5Lt2++uqryfZ6jUcQRklXo7qG9To/5vIyT5LK1nEkbzLpMPKJzejKL0Sm\nyPmFyBQ5vxCZIucXIlPk/EJkipxfiEzpqdTX11fE5EQ6Soy1A0BfMR1ltbjIEzeWB7gM9duPPkxt\ng2UeWXbs2LFke6mPf4YePnyY2qL6eYsLvA7h0BDPi3D8+PFku1mQS8G5RBVF4UURbiyqL0pyGdUM\nBHi/SCKcnEwnjK1VefLXqB5fqcSTvxaLXE5dX+dRlcvLafmzr4+vRVanUlKfEGJL5PxCZIqcX4hM\nkfMLkSlyfiEypae7/e4tNOrpoIlop/fa1fSu/tK1K/xcLb6bOzrCd75PPZQudwXwnIET43xHPFIC\nLl54i9p+/vOfU1sUEHRwJh18FOXiKwaXgGi3f2lpcy2X2465jTJZb73F56NY5Es1yoV48sSpZPvc\n3BztMz+fzoMIAK0W39GP8i4G3WgQVJSrsdFIr+8okGwzuvILkSlyfiEyRc4vRKbI+YXIFDm/EJki\n5xciU7op1/UcgD8AsOjuj3XavgDgjwHc0to+5+4/3OpYtVodly5dStqi8kksp1okG7GyVQBQKPDP\nvKmpKWpjQTNRYEmU5y6Scti5AODRRx+lNhZ8VKlUaJ+olFcc5HL3r+38+fO0z0svvURtjz7629Q2\nMzNDbWur6dcdyZTR2one6wcfPEltExN8zU1Pp+XZQ4cO0T6HD6Xl3lKJBwNtppsr/18AeDLR/ufu\nfrrzb0vHF0LcW2zp/O7+IgD+MSmEuC/ZyT3/Z8zsFTN7zszSQdNCiHuW7Tr/VwGcAnAawDyAL7En\nmtkzZjZnZnPr6+vbPJ0QYrfZlvO7+4K7N929BeBrAJ4InnvG3WfdfTbKQCOE6C3bcn4zu32r8ZMA\nXtud4QghekU3Ut83AXwEwAEzewfA5wF8xMxOA3AA5wH8STcna7ZaWFpJy0pvz/M9xXo9Hak0c4Dn\nx2PljABgeppvUTzyCM/vd+JkWl6p1nguu+ERnvPtyEk+/tNPvJ/a+vr4Mdfr6fCxq9e5nLewwKMj\nh4a4dHTocDrKEQBAAu1mDvIowZlDXEa7eTPKacgj2Up96fl46ASf+z7nEvLxY7xs2OQUH/+7l96g\ntlOn0lLl47N8jBvVdBTswADPx7iZLZ3f3T+VaP5612cQQtyT6Bd+QmSKnF+ITJHzC5Epcn4hMkXO\nL0Sm9DSBZ7PZxI0b15O2sSAJZrGQlpsGy+nEhwAwEZT/Onr0KLVVazz67cUXX0y2T03zsR86zKME\np6a5HAnnn8vVoNRUdSMt9ayvcfkqivibn3+b2jbW16jt6LF0RNojjzxC+0TSYbXCpcq1NT6OpavL\nyXaWjBUAbl7nyWTrTT73zSbP0jl1gEceHj/+YLI9GuNGNV3qrdTHIy03oyu/EJki5xciU+T8QmSK\nnF+ITJHzC5Epcn4hMqWnUh/gKCAtlUT11ljdvY11LslsrPPcAdUKTyqyepPLXhfeejPZfu0qj3y7\nvsQjCCcnx6mtUOBvTaA2wVvpeWw1+fzW6zwSjEmzQCz1XbyQjmIrD/LXNTKSlq8AwMyorRmMn9Uo\n7Ovj71l0roXLPAJydTUtKwLAdCAH1xppiXD5Jo8WhaUXQUu1+oQQWyHnFyJT5PxCZIqcX4hMkfML\nkSk93e0vGFAeSH/eXLnCy0K1muk+kxM8WAJBHrbl63zHtlTiu+KHD6XP12rVaJ+VG1yRuHZlkdrc\n+Y5zf4kHNBULadv6errkGQDcWF6htkqgqByYSZeZAgCz9A58y/lc9ffzoJQo7Xu1yo85OppWVMpl\nnm9vYvoAtVVqfB5rgW2jytfj9eX0HF+5ytWP8Ym07S42+3XlFyJX5PxCZIqcX4hMkfMLkSlyfiEy\nRc4vRKZ0U67rOIC/BHAI7fJcZ9z9K2Y2BeBbAE6iXbLrKXfnUSC3jldIBySsV27QPixY5XCZlzMa\nHi5TW4sECgHA2hoP7GH5/QbKXJZbXeXBGcvLvERZrcbHWDAuiTXqTErl51pc4LYBrnzixMnjvN9A\nemmxMlMA0BfIrJUql9EiGbC/Py19PvZPTtM+IyOBDDjB8y6urPA1HEmEV5bSbjM8ziXdodF04Npu\nS30NAH/m7u8F8CEAf2pm7wXwLIAX3P1hAC90/hZC3Cds6fzuPu/uP+s8XgHwOoCjAD4O4PnO054H\n8Im9GqQQYve5q3t+MzsJ4P0AzgI45O63SqdeRvu2QAhxn9C185vZCIDvAPisu99x4+bujvZ+QKrf\nM2Y2Z2ZzGxs897oQord05fxmVkLb8b/h7t/tNC+Y2ZGO/QiA5A/V3f2Mu8+6+2y5zDfhhBC9ZUvn\nt3ZOo68DeN3dv3yb6QcAnu48fhrA93d/eEKIvaKbqL7fAfBHAF41s5c7bZ8D8EUA3zazTwO4AOCp\nrQ5ULBrGxgaStrFR/q1g6VpaQrn0zlu0z9oKl9jKZZ7fb3mZ52G7ePF8sr1Q5GWaWi2eX87BbYYg\np2FQymujkh7LzRs8397aKpehpse57PX2hYvU1iJRlY0ml+VGxvi5pqa4xDYzzaMLSwPpdXXlygLt\nU6kEkXsNHp3XdL4O6hs88nCNSJUbdd6n2kivHU/ffSfZ0vnd/W8AMCH7o12fSQhxT6Ff+AmRKXJ+\nITJFzi9Epsj5hcgUOb8QmdLTBJ7FYgFTJPFg/QhPmlgkYsPydS5fzV+6QG1R8sboV4grpHTV+jqX\nFQtFHvFXDG08cq/V5P3qtbStUeMyVCkolVat8CjHtSCKbXAovbRGJrjM6kEdsmqVj2NwkEe/OZHf\nWIQmACwtByXKgvVR6OPvS3koLXEDwOT0VLp9kpd6sz72nvExbEZXfiEyRc4vRKbI+YXIFDm/EJki\n5xciU+T8QmRKT6U+M8AK6WikyalR2m98PB3RtbbKpaEri1yG2qjwyKwoQeMhWquPj2NllSesvHEj\nSPgYSGzVDX4+b6WlrXqNR4g1m3w+6lwhxNJNXl+xRMr/ra710z7XV7h0a4GCdfIUT+R68PCxZPvo\nSLqGHwAsLF6itihZ6Og4X8Olfn6+/sH0nBSChKZr6+kJjqJIf+P4XT9TCPGPCjm/EJki5xciU+T8\nQmSKnF+ITOnpbn87u3c6x9joaDrgBwCaDbLrSfLEAUDfER5AYsHLbjT49naVlIxaX+c7+uVBHtBR\nDAJq1lb5rnJtkO/2z1fSO/CNBu8zM3OQ2hDkrBsku9QA0GwRtaLAjzfiXOFYJ7kJAWBh4TK11YkS\nE62B5RtEqgDQ389f8+TkA9T2nt96kNomJtNrv9niuQSHyNzbXVzOdeUXIlPk/EJkipxfiEyR8wuR\nKXJ+ITJFzi9Epmwp9ZnZcQB/iXYJbgdwxt2/YmZfAPDHAK50nvo5d/9hdCx3R72eli9aLV5myDyd\noy2SXUp93Far8uCHapCjjQXb9PfzUmOFBv98jYKIRoZ5kEitxmW7gqVf99IgDyKyIO9bf4nnx0NQ\nbqxOpEXv4+/zkHFZtBHIgKRyFQDg+vLV9LmCvH/Do3ztzMzw0mAPHOO2qWn+fo6Np9dPeZBLwaVy\nel1FAVCb6UbnbwD4M3f/mZmNAjhnZj/q2P7c3f9z96cTQtwrdFOrbx7AfOfxipm9DuDoXg9MCLG3\n3NU9v5mdBPB+AGc7TZ8xs1fM7Dkz43mGhRD3HF07v5mNAPgOgM+6+00AXwVwCsBptL8ZfIn0e8bM\n5sxsbm2N308LIXpLV85vZiW0Hf8b7v5dAHD3BXdversqwtcAPJHq6+5n3H3W3WeHh/nGmBCit2zp\n/GZmAL4O4HV3//Jt7Udue9onAby2+8MTQuwV3ez2/w6APwLwqpm93Gn7HIBPmdlptOW/8wD+ZMsj\nmaFvIC2jBJWaUCymP6OGAzmsaDyqb32NR5ZV61yK6m+kj1kuc2mossHz0g3385JcEZUKj/Yq9KW/\nXQ0Oj9E+S0vL1FZb5+OvB1GVTUvrb+V+vuRGJ/i20fRB/l5HORRB1k55gK+Pqal0+SwAOHKUR+5F\nMuDIGH/d/aV0xGIxkEULSPcxEjWbopvd/r9BugBYqOkLIe5t9As/ITJFzi9Epsj5hcgUOb8QmSLn\nFyJTelyuy1AspWUxDySKvmK6T3mQyzUF41FbtTr/zCsPjlBbkUQKehDdtlHj0WgsmSkQJ9zcIIlE\nAaCPSGkTUzyCsB7orNdr/FeZpSCqskjmZGiEy5tT0zyJ63hgGxrm0YClUvp8cSJOLjmOjPD10Wzy\n96XeCCRTI8lJgwi9BpGkWx7InpvQlV+ITJHzC5Epcn4hMkXOL0SmyPmFyBQ5vxCZ0lOpr9ls4Sap\ng9Zf4rLdUDkt5fQVeX6Aeo3rJJX1GrVFyTGNZEesVXmfqPZfJPXVanyMrGYgABBlC6USl8MGB4M8\nCwd4hBvAIwXd0hJh/wCXRccm+Bgnp/j6GBnl4+/rSyfBHIwSeAZ5J4xEKwJAvcblvFaT1160Elmr\nztdws5FeH+5BNtNN6MovRKbI+YXIFDm/EJki5xciU+T8QmSKnF+ITOmp1NdyR6WalijKg+O03+BQ\nOpKKRQgCwNoal8MqG1xGi2wgSRPXK1ziqVZ5kktY9xFYt9NPpM826c/zZotLjtHxSiThKgAMlLkU\n1ddHavWBS14Dg8EYg7p1Dj6PVRKVWK2lJWcAqG1wqa/Uv71xlEpc1i0Rqc8KfD6adRIt6pG0fCe6\n8guRKXJ+ITJFzi9Epsj5hcgUOb8QmbLlbr+ZlQG8CGCg8/z/7u6fN7MpAN8CcBLtcl1Pufv16FjF\nYhEjY+lccqPjPG9aqZwOwtio8J30m2t8V3mjzndlm0EwRcvTO7bVOh9HLciPVw0CQUolvqs8NMqD\nXOr1dGBHFHwUHa9Q4NeHwQE+RlhabWmSOQSA/jIPShke5qpDochfG3vdVaI6AUCtEQTHFLjLDARK\nQCGYqiZZP40gGKhB8gX6Lu/2VwH8S3d/H9rluJ80sw8BeBbAC+7+MIAXOn8LIe4TtnR+b7Pa+bPU\n+ecAPg7g+U778wA+sScjFELsCV3d85tZsVOhdxHAj9z9LIBD7j7fecplAIf2aIxCiD2gK+d396a7\nnwZwDMATZvbYJruDZKYws2fMbM7M5tbXohz2Qohecle7/e6+DOCvATwJYMHMjgBA5/9F0ueMu8+6\n++zQMM+eIoToLVs6v5nNmNlE5/EggN8D8CsAPwDwdOdpTwP4/l4NUgix+3QT2HMEwPNmVkT7w+Lb\n7v4/zOz/Avi2mX0awAUAT211oGKxSEshjYyM0n6tZloeWl6+Qftcv84DN6obXA4xcE2G2YpFXoKq\nVeVy3urqKrWVy1zaGhsLcucRqbLZ4BJbVIIqynVnBS6JVWtpW6vKpdRikc99NB+lfj7/JIUfhoZ4\nMFOBBHABQDEooVUo8jlusUAcAOu1m8n2Wp2vnWYzLQ82m93n8NvS+d39FQDvT7RfA/DRrs8khLin\n0C/8hMgUOb8QmSLnFyJT5PxCZIqcX4hMMQ+irHb9ZGZX0JYFAeAAgKs9OzlH47gTjeNO7rdxnHD3\nmW4O2FPnv+PEZnPuPrsvJ9c4NA6NQ1/7hcgVOb8QmbKfzn9mH899OxrHnWgcd/KPdhz7ds8vhNhf\n9LVfiEzZF+c3syfN7O/M7Ndmtm+5/8zsvJm9amYvm9lcD8/7nJktmtlrt7VNmdmPzOwfOv/zjKZ7\nO44vmNmlzpy8bGYf68E4jpvZX5vZ35rZL83s33TaezonwTh6OidmVjazn5jZLzrj+A+d9t2dD3fv\n6T8ARQBvADgFoB/ALwC8t9fj6IzlPIAD+3De3wXwAQCv3db2nwA823n8LID/uE/j+AKAf9vj+TgC\n4AOdx6MA/h7Ae3s9J8E4ejonAAzASOdxCcBZAB/a7fnYjyv/EwB+7e5vunsNwF+hnQw0G9z9RQBL\nm5p7nhCVjKPnuPu8u/+s83gFwOsAjqLHcxKMo6d4mz1Pmrsfzn8UwNu3/f0O9mGCOziAH5vZOTN7\nZp/GcIt7KSHqZ8zslc5twZ7fftyOmZ1EO3/EviaJ3TQOoMdz0oukublv+H3Y24lJ/xWAPzWz393v\nAQFxQtQe8FW0b8lOA5gH8KVendjMRgB8B8Bn3f2O9Da9nJPEOHo+J76DpLndsh/OfwnA8dv+PtZp\n6znufqnz/yKA76F9S7JfdJUQda9x94XOwmsB+Bp6NCdmVkLb4b7h7t/tNPd8TlLj2K856Zz7rpPm\ndst+OP9PATxsZg+ZWT+AP0Q7GWhPMbNhMxu99RjA7wN4Le61p9wTCVFvLa4On0QP5sTMDMDXAbzu\n7l++zdTTOWHj6PWc9Cxpbq92MDftZn4M7Z3UNwD8u30awym0lYZfAPhlL8cB4Jtof32so73n8WkA\n02iXPfsHAD8GMLVP4/ivAF4F8EpnsR3pwTg+jPZX2FcAvNz597Fez0kwjp7OCYB/BuDnnfO9BuDf\nd9p3dT70Cz8hMiX3DT8hskXOL0SmyPmFyBQ5vxCZIucXIlPk/EJkipxfiEyR8wuRKf8Pr+Osz5ES\nB18AAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f3d834a14e0>"
+       "<matplotlib.figure.Figure at 0x7f39d3461ef0>"
       ]
      },
      "metadata": {},
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -525,10 +525,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "s = scores(fc6, 'dense_2')\n",
@@ -539,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +547,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-c41f8546b001>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m256\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtraining_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_epochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-24-c41f8546b001>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m256\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtraining_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_epochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'x_train' is not defined"
      ]
     }
