--- a/01-Linear-Classifiers/tf_tutorial.ipynb
+++ b/01-Linear-Classifiers/tf_tutorial.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Tensorflow Basics Tutorial\n",
     "## What is TensorFlow?\n",
@@ -16,15 +13,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# This is a comment. Any text after the \"#\" is not run by Python and is there to describe the code.\n",
+    "# This is a comment. \n",
+    "# Any text after the \"#\" is not run by Python and is there to describe the code.\n",
     "\n",
-    "# The next few lines make sure that the code works in both Python 3 and Python 2 (feel free to ignore if you don't understand). \n",
+    "# The next few lines make sure that the code works in both Python 3 and Python 2 \n",
+    "# (feel free to ignore if you don't understand).\n",
     "from __future__ import print_function\n",
     "from __future__ import division\n",
     "from __future__ import absolute_import\n",
@@ -36,10 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Tensors\n",
     "A tensor is just a multidimensional array, similar to a ndarray in numpy - any value we use in tensorflow will be a tensor."
@@ -48,11 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -67,7 +57,8 @@
    "source": [
     "tf.reset_default_graph()  # Don't worry about what this does, we will explain later\n",
     "\n",
-    "x = tf.constant([[2,4],[1,3]], name='example1')    # create a new tf.constant called \"x\". It is a 2x2 Tensor. \n",
+    "# create a new tf.constant called \"x\". It is a 2x2 Tensor. \n",
+    "x = tf.constant([[2,4],[1,3]], name='example1')    \n",
     "print(x)\n",
     "\n",
     "x = x*5     # multiply each element of \"x\" by 5. Re-assign \"x\" to this new tensor object. \n",
@@ -79,10 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Each tensor object has a value that either we specify directly (like in the 1st example) or is the result of other operations (like the 2nd and 3rd examples). Printing a Tensor displays the following:\n",
     "- name\n",
@@ -96,10 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Sessions\n",
     "To tell TensorFlow to actually compute things, we need to create a session. A good way to think about a session is as an administrator that manages all the tensors and operations you have defined. It will compute only what needs to be computed, keep track of variables we will need later, and try to optimize the speed of the operations."
@@ -108,11 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -137,9 +118,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -149,11 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -189,10 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Again, notice how `print(x)` can't give us the value, but `print(x.eval())` does! `x.eval()` returns a numpy ndarray because now TensorFlow needs a way to show the actual value as a multidimensional array, and numpy is the best way to do that.\n",
     "\n",
@@ -202,11 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -239,10 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Graphs\n",
     "A Tensorflow Graph is how TensorFlow internally represents and remembers all the operations and Tensors that you define. TensorFlow uses the graph to know exactly which Tensors to compute based on the fetches you provide in the `session.run()` method. TensorFlow automatically uses a default graph which is why we never had to call any functions to make one, although we can manually specify one if we want to.\n",
@@ -252,20 +217,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "<img src ='http://ischlag.github.io/images/graph_mess.png', alt='Image from Imanol Schlag blog'>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "( ͡°_ʖ ͡°) Wow thats pretty complicated actually.\n",
     "\n",
@@ -274,20 +233,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "<img src ='http://ischlag.github.io/images/graph_example.png', alt='Image from Imanol Schlag blog'>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "( ͡~ ͜ʖ ͡°) Much better.\n",
     "\n",
@@ -308,11 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -337,10 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Notice that we had to specify a shape for `x`. This is because TensorFlow wants to know beforehand the shape of the Tensor so that it can properly define the graph. Because we set the shape as `[None, 2]`, `x` can be fed data of shape `[1,2]` or `[1337,2]`, but not `[2,3]` or `[10,4]` or `[12, 2, 2]` for example. "
    ]
@@ -348,11 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -367,7 +309,7 @@
     "\n",
     "try:\n",
     "    sess.run(x2)             # will throw an error\n",
-    "    print(\"Success?\")        # we won't ever get to print this because we will get an error before we reach it\n",
+    "    print(\"Success?\")        # will never happen since error occurs first\n",
     "\n",
     "except Exception as err:     # if an error occurs, the following code should execute\n",
     "    print('Error!')"
@@ -375,10 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "We got an error because when we try to evaluate `x2`, TensorFlow looks at the graph and sees that it depends on `x`. But we never fed any data into `x`!   \n",
     "Now let's do it correctly:"
@@ -387,11 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -416,8 +351,9 @@
     "                    [7,8],\n",
     "                    [9,10]]) # 3x2 ndarray\n",
     "\n",
-    "#In python, a dict is a structure that maps keys to values, and looks like {key1: value1, key2: value2, ...}\n",
-    "#`{x: input_1}` is a dict that says that the Tensor `x` will be fed the data from the ndarray `input_1`\n",
+    "# In python, a dict is a structure that maps keys to values\n",
+    "# e.g. {key1: value1, key2: value2, ...}\n",
+    "# {x: input_1} is a dict that says Tensor `x` will be fed data from the array `input_1`\n",
     "\n",
     "print('Result 1:\\n', sess.run(x2, feed_dict={x: input_1}))\n",
     "print('\\n Result 2:\\n', sess.run(x2, feed_dict={x: input_2}))"
@@ -425,10 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Variables\n",
     "So we have `tf.constant` which always keeps the same value, and `tf.placeholder` which we can manually set the value of for each `session.run()` call. However, we have nothing that can hold a state between `session.run()` calls that can be updated and read from by TensorFlow. To fix this, we will use a `tf.Variable`. \n",
@@ -441,11 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -460,17 +389,15 @@
     "tf.reset_default_graph()    # clear graph\n",
     "sess.close()                # close the previous session\n",
     "\n",
-    "x = tf.Variable(tf.random_normal([10,2]), name=\"X\")  #Create the `tf.Variable from a random Tensor of shape [10,2]`\n",
+    "# Create the `tf.Variable from a random Tensor of shape [10,2]\n",
+    "x = tf.Variable(tf.random_normal([10,2]), name=\"X\")  #\n",
     "print(\"Value of x:\", x)\n",
     "print(\"Type of x:\", type(x))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Importantly, a `tf.Variable` has to be initialized before using it in a session. The following code will throw an error:"
    ]
@@ -478,9 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -509,9 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -531,7 +454,8 @@
     }
    ],
    "source": [
-    "init = tf.global_variables_initializer()  # This is just a TensorFlow operation. Nothing is run just yet.\n",
+    "# This is just a TensorFlow operation. Nothing is run just yet.\n",
+    "init = tf.global_variables_initializer()  \n",
     "\n",
     "sess.run(init)  # Now we actually run the initialization op\n",
     "\n",
@@ -547,10 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Optimization\n",
     "One strength of Tensorflow is that the programmer doesn't have to know how to calculate the gradient of the function being optimized. Instead, the library comes with several optimizers commonly used in deep learning, including Gradient Descent, Momentum, and ADAM. Below we use an optimizer to minimize the function $y=x^2$ given a random initial $x$. Obviously the correct value is for $x$ to just be zero, so lets see if TensorFlow figures that out."
@@ -559,11 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -588,7 +505,8 @@
     "x = tf.Variable(5.0)                # let x be a variable with initial value x=5.0\n",
     "y = x**2                            # let y = x^2\n",
     "\n",
-    "train_step = tf.train.GradientDescentOptimizer(0.1).minimize(y) # gradient descent to minimize y, with learning rate=0.1\n",
+    "# gradient descent to minimize y, with learning rate=0.1\n",
+    "train_step = tf.train.GradientDescentOptimizer(0.1).minimize(y) \n",
     "\n",
     "sess.run(tf.global_variables_initializer())     # initialize all variables\n",
     "\n",
@@ -601,10 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Notice that the value of the variable `x` changes with training, and converges to (nearly) the global minimum at $x=0$ as expected; it is not exact because gradient descent is an approximation.  The Session is still responsible for running the optimization operation, and a list of operations/tensors can be passed to the `session.run()` function to extract multiple values from the model. We don't need a feed_dict because there are no placeholders defined."
    ]
@@ -627,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
