--- a/01-Linear-Classifiers/logit_notebook.ipynb
+++ b/01-Linear-Classifiers/logit_notebook.ipynb
@@ -226,7 +226,8 @@
    "source": [
     "labels = np.array(dataset[b'labels'])\n",
     "\n",
-    "# since all values are exactly 0 or 1, we do not need floating point accuracy (hence the .astype(int))\n",
+    "# since all values are exactly 0 or 1, we do not need floating point accuracy \n",
+    "# hence the .astype(int)\n",
     "encoded_labels = np.zeros((10000, num_classes)).astype(int)\n",
     "encoded_labels[np.arange(10000), labels] = 1"
    ]
@@ -276,11 +277,13 @@
    },
    "outputs": [],
    "source": [
-    "# When creating placeholders, we specify the data type, the tensor's shape (None indicates it may vary), and a name\n",
+    "# When creating placeholders, we specify the data type, the tensor's shape \n",
+    "# (None indicates it may vary), and a name\n",
     "x = tf.placeholder(tf.float32, [None, input_length], name='x')\n",
     "y = tf.placeholder(tf.int64, [None, num_classes], name='y')\n",
     "\n",
-    "# When creating variables, we specify how to initialize them: tf.truncated_normal() uses a normal distribution\n",
+    "# When creating variables, we specify how to initialize them: \n",
+    "# tf.truncated_normal() uses a normal distribution\n",
     "W = tf.Variable(tf.truncated_normal([input_length, num_classes]), name='W')\n",
     "b = tf.Variable(tf.truncated_normal([num_classes]), name='b')"
    ]
@@ -417,8 +420,8 @@
     "        total_loss += results[1]\n",
     "        total_accuracy += results[2]\n",
     "    if j%10 == 9:\n",
-    "        print('epoch', '{:3}'.format(j+1), ': loss=' + '{:6}'.format(str(int(total_loss/n_batches))), \n",
-    "              'accuracy=' + str(round(total_accuracy/n_batches, 4)))"
+    "        print('epoch {:3}: loss={:6} accuracy={:.4f}'\n",
+    "              .format(j+1, int(total_loss/n_batches), total_accuracy/n_batches))"
    ]
   },
   {
