Updated CNN tutorial

--- a/02-Fully-Connected-Networks/fcn_notebook.ipynb
+++ b/02-Fully-Connected-Networks/fcn_notebook.ipynb
@@ -368,7 +368,9 @@
    "source": [
     "## Training the Network\n",
     "\n",
-    "Now we just need to feed the training set into the model and perform gradient descent. Because the training set is large (55000 images), we will feed in only a subset of the training set at a time for each batch."
+    "Now we just need to feed the training set into the model and perform gradient descent. Because the training set is large (55000 images), we will feed in only a subset of the training set at a time for each batch.\n",
+    "\n",
+    "**NOTE:** This will take a while... (15+ mins)"
    ]
   },
   {
