Added comments, diagram

--- a/03-Convolutional-Neural-Networks/cnn_notebook.ipynb
+++ b/03-Convolutional-Neural-Networks/cnn_notebook.ipynb
@@ -151,14 +151,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# generates random permutation of numbers from 0-9999\n",
     "shuffle = np.random.permutation(10000)\n",
     "\n",
+    "# reorder images, labels according to same random permutation\n",
     "images = images[shuffle, :]\n",
     "labels = labels[shuffle]\n",
     "\n",
+    "# use first 8000 images as training set\n",
     "x_train = images[:8000, :]\n",
     "y_train = labels[:8000]\n",
     "\n",
+    "# use last 2000 images as test set\n",
     "x_test = images[8000:, :]\n",
     "y_test = labels[8000:]"
    ]
@@ -181,6 +185,8 @@
    "outputs": [],
    "source": [
     "x = tf.placeholder(tf.float32, [None, 32, 32, 3], 'images')\n",
+    "\n",
+    "# storing decimal places for integers is a waste of space\n",
     "y = tf.placeholder(tf.int64, [None], 'labels')"
    ]
   },
@@ -198,10 +204,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# remember to group variables and tensors using the variable scope!\n",
     "with tf.variable_scope('conv1_1'):\n",
+    "    # weights have shape [filter height, filter width, depth_in, depth_out]\n",
     "    w1 = tf.get_variable('W', shape=[3, 3, 3, 64])\n",
+    "    \n",
+    "    # biases have shape [depth_out]\n",
     "    b1 = tf.get_variable('b', shape=[64])\n",
+    "    \n",
+    "    # the strides argument controls how the size of the steps of the sliding window\n",
+    "    # 'SAME' padding zero-pads the input tensor so the output tensor has the same size\n",
     "    conv1 = tf.nn.conv2d(x, w1, strides=[1, 1, 1, 1], padding='SAME')\n",
+    "    \n",
+    "    # apply ReLU activation function\n",
     "    h1 = tf.nn.relu(conv1 + b1)\n",
     "\n",
     "with tf.variable_scope('conv1_2'):\n",
@@ -225,6 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# the max_pool() takes the inputs, the pooling window size, strides, and padding\n",
     "with tf.variable_scope('pool1'):\n",
     "    p1 = tf.nn.max_pool(h2, [1, 2, 2, 1], [1, 2, 2, 1], padding='SAME')"
    ]
@@ -271,7 +287,10 @@
    "source": [
     "Make sure you take the time to understand the functions above in detail! (Note in particular that the output of the `fc_layer()` function has not been passed through an activation function!)\n",
     "  \n",
-    "Continuing where we left off, we implement the rest of the convolutional layers:"
+    "Continuing where we left off, we implement the rest of the \n",
+    "convolutional layers:\n",
+    "\n",
+    "![VGG](../images/vgg16.png)"
    ]
   },
   {
@@ -315,6 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# when reshaping, -1 means that Python should infer the size automatically\n",
     "flat = tf.reshape(pool5, [-1, 512])\n",
     "fc6 = tf.nn.relu(fc_layer(flat, 4096, 'fc6'))\n",
     "\n",
@@ -406,8 +426,7 @@
     "        y_batch = y_train[idx]\n",
     "        sess.run(train_step, feed_dict={x: x_batch, y: y_batch})\n",
     "    l, a = sess.run([lossm accuracy], feed_dict={x: x_train, y: y_train})\n",
-    "    print('epoch {:2d} loss={:.3f} accuracy={:.2f}%'\n",
-    "           .format(n, l, 100*a))"
+    "    print('epoch {:2d} loss={:.3f} accuracy={:.2f}%'.format(n, l, 100*a))"
    ]
   },
   {
