Change data filepath

--- a/01-Linear-Classifiers/logit_notebook.ipynb
+++ b/01-Linear-Classifiers/logit_notebook.ipynb
@@ -75,7 +75,7 @@
     "            dict = pickle.load(fo, encoding='bytes')\n",
     "    return dict\n",
     "\n",
-    "dataset = unpickle('cifar-10-data')"
+    "dataset = unpickle('../data/cifar-10-data')"
    ]
   },
   {
